--- a/application/views/scripts/certifications/detailcertification.phtml
+++ b/application/views/scripts/certifications/detailcertification.phtml
@@ -36,7 +36,15 @@
     <a id="ajouter_reponse" ><img alt="Ajouter une reponse" src="<?php APPLICATION_PATH?>/images/ajouter-modifier-icone-9159-16.png" />&nbsp;Ajouter une réponse</a>
     <input type="checkbox" id="reponse_ouverte" /><label for="reponse_ouverte">Réponse ouverte</label>
     <p><input type="submit" id="valider_question_reponse" value="Enregistrer" /> <span id="info_enregistrer" style="color : green"></span><span id="erreur_enregistrer" style="color : red"></span></p>
-</div>
+</div> <!-- ajouter_question -->
+<div id="edit_form" style="display : none">
+    <p style="text-align : center">
+        <label for="question_obligatoire">Question obligatoire : </label><input type="checkbox" id="question_obligatoire_editer" />
+    </p><br />
+    <p>
+        <label class="ajouter_question_label" for="question_editer">Question : </label><textarea class="question" id="question_editer"></textarea>
+    </p>
+</div> <!-- edit_form -->
 
 <input type="hidden" id="certification_demande" value="<?php echo $this->certification_demande?>" />
 <input type="hidden" id="ajouter_question_droit" value="<?php echo $this->ajouter_question?>" />
@@ -171,10 +179,10 @@
             url : 'getlistequestionreponse?id_certification='+$("#certification_demande").val(),
             dataType: 'json',
             colModel : [
-                    {display: 'Questions', name : 'question', width : 580, sortable : true, align: 'left'},
+                    {display: 'Questions', name : 'question', width : 695, sortable : true, align: 'left'},
                     {display: 'Nombre de réponses', name : 'nbr_reponse', width : 100, sortable : true, align: 'left'},                    
                     {display: 'Question obligatoire', name : 'question_obligatoire', width : 100, sortable : false, align: 'left'},
-                    {display: 'Réponse ouverte', name : 'reponse_ouverte', width : 100, sortable : false, align: 'left'}
+                    //{display: 'Réponse ouverte', name : 'reponse_ouverte', width : 100, sortable : false, align: 'left'}
             ],
            buttons : [
                     {name: 'Ajouter', bclass: 'add', onpress : add_record},
@@ -182,10 +190,8 @@
                     {name: 'Lier', bclass: 'relier', onpress : link_question},
                     {separator: true},
                     {name: 'Détails', bclass: 'detail', onpress : detail_record},
-/*
                     {separator: true}, 
                     {name: 'Editer', bclass: 'edit', onpress : edit_record},
-*/
                     {separator: true},
                     {name: 'Supprimer', bclass: 'delete', onpress : delete_record},
             ],
@@ -312,25 +318,39 @@
              }
                           
              var id;
+             var question_obligatoire;
              $('.trSelected',grid).each(function(){
                  id = this.id.substr(3);
-                 $("#question").val($('td[abbr="question"] >div', this).html());
-                 $("#nbr_reponse").val($('td[abbr="nbr_reponse"] >div', this).html());                 
-             });            
+                 $("#question_editer").val($('td[abbr="question"] >div', this).html());
+                 question_obligatoire = $('td[abbr="nbr_reponse"] >div', this).html();                 
+             });
+             
+            if(question_obligatoire == "oui")            
+                $('#question_obligatoire_editer').attr('checked', true);
+            else
+                $('#question_obligatoire_editer').removeAttr('checked');
              
              $("#edit_form").dialog({
                  title : "Editer une question",
+                 width : 400,
                  buttons : [
                      {
                          text : "Valider",
                          click : function(){
+                            var question_obligatoire;
+                            if($('#question_obligatoire_editer').attr('checked') == "checked")
+                                question_obligatoire = 1;
+                            else
+                                question_obligatoire = 0;
+
                              $.ajax({
                                  type : 'post',
                                  url : '/Questions/editer',
                                  data : {
                                      'id_question' : id,
-                                     'question' : $("#question").val(),
-                                     'nbr_reponse' : $("#nbr_reponse").val(),
+                                     'question' : $("#question_editer").val(),
+                                     'question_obligatoire' : question_obligatoire,
+                                     'certification_demande' : $('#certification_demande').val()
                                  },
                                  success : function(){
                                      $("#tableau_question").flexReload();
