suppresion de la case reponse ouverte

--- a/application/views/scripts/certifications/detailcertification.phtml
+++ b/application/views/scripts/certifications/detailcertification.phtml
@@ -34,7 +34,7 @@
         <div id="container_reponse"></div>
     </div>
     <a id="ajouter_reponse" ><img alt="Ajouter une reponse" src="<?php APPLICATION_PATH?>/images/ajouter-modifier-icone-9159-16.png" />&nbsp;Ajouter une réponse</a>
-    <input type="checkbox" id="reponse_ouverte" /><label for="reponse_ouverte">Réponse ouverte</label>
+    <!-- <input type="checkbox" id="reponse_ouverte" /><label for="reponse_ouverte">Réponse ouverte</label> -->
     <p><input type="submit" id="valider_question_reponse" value="Enregistrer" /> <span id="info_enregistrer" style="color : green"></span><span id="erreur_enregistrer" style="color : red"></span></p>
 </div> <!-- ajouter_question -->
 <div id="edit_form" style="display : none">
