--- a/public/css/zend.css
+++ b/public/css/zend.css
@@ -655,7 +655,7 @@
 	margin-left: 27em;
 }
 
-.inscription-right > input{
+.inscription-right > input, .inscription-right > select{
 	margin-top: 0.4em;
 }
 
