--- a/public/css/zend.css
+++ b/public/css/zend.css
@@ -31,6 +31,7 @@
 .flexigrid div.fbutton .valider { background : url('../images/icone_ok_16.png') no-repeat center left;}
 .flexigrid div.fbutton .entretien { background : url('../images/bulle-chat-parole-parler-icone-4615-16.png') no-repeat center left;}
 .flexigrid div.fbutton .refuser { background : url('../images/icone_erreur_16.png') no-repeat center left;}
+.flexigrid div.fbutton .document { background : url('../images/documents-dossier-icone-5436-16.png') no-repeat center left;}
 
 /* Sidebar */
 
