--- a/application/views/scripts/utilisateurs/motdepasseoublie.phtml
+++ b/application/views/scripts/utilisateurs/motdepasseoublie.phtml
@@ -11,7 +11,8 @@
 	<input id="mail" name="mail"/>
 </div>
 <br />
-<input type="submit" id="envoyer" value="Valider" style="margin-left : 18em"/>
+<input type="submit" id="envoyer" value="Valider" style="margin-left : 15em"/>
+<input type="submit" value="Retour" style="margin-left : 1em" onclick="window.history.back()"/>
 <br /><br /><span id="info" style="color : green"></span>
 <span id="error" style="color : red"></span>
 
