modification texte choix dispo parcour'

--- a/application/views/scripts/utilisateurs/parcoursformateur.phtml
+++ b/application/views/scripts/utilisateurs/parcoursformateur.phtml
@@ -160,7 +160,7 @@
 				?>		
 				<div class="separateur"></div>
 					<div id="select_jour_parcour">
-						<p>Je choisis les jours et les heures où je suis disponible pour mon entretien <a title="Un clic sur le nom du jour sélectionne toute la journée"><img src="<?php APPLICATION_PATH?>/images/aide-point-interrogation-soutien-icone-4653-16.png" /></a></p><br />
+						<p>Merci de choisir vos disponibilités pour votre entretien.<a title="Un clic sur le nom du jour sélectionne toute la journée"><img src="<?php APPLICATION_PATH?>/images/aide-point-interrogation-soutien-icone-4653-16.png" /></a></p><br />
 						<div id="jour1" class="select_horaire" >
 							<span class="span_jour_parcour"></span>
 							
