modification texte choix dispo parcour'

--- a/application/views/scripts/utilisateurs/parcoursformateur.phtml
+++ b/application/views/scripts/utilisateurs/parcoursformateur.phtml
@@ -422,7 +422,8 @@
 					<?php
 						}else{
 							echo "<input type='submit' id='send_adresse_skype' value='valider' /><br />";
-							echo "<br /><span style='color : green'>Vous avez déjà enregistré vos disponibilitées,<br /> un administrateur vous contactera sur un des crénaux que vous avez saisis</span>";
+							echo "<br /><span style='color : green'>Vous avez déjà renseigné vos disponibilités.<br />
+L'équipe Easylia vous contactera très rapidement par mail pour vous indiquer la date et l'heure de votre entretien en visio-conférence, en fonction des disponibilités que vous aviez saisies</span>";
 						}
 					?>
 					</p>
