modification parcours pour passer etape suivante après test motivation

--- a/application/views/scripts/utilisateurs/parcoursformateur.phtml
+++ b/application/views/scripts/utilisateurs/parcoursformateur.phtml
@@ -626,6 +626,7 @@ L'équipe Easylia vous contactera très rapidement par mail pour vous indiquer l
                     $('#onglet_test_motivation').addClass('etape_valide');
                     $("#motivation_test").hide();
                     $("#info_test").html('Merci d\'avoir passé le test de motivation');
+                    location.reload();
                 }
             });
         }
