modification fonction vérification du mot passe lors de changement

--- a/application/views/scripts/utilisateurs/changepassword.phtml
+++ b/application/views/scripts/utilisateurs/changepassword.phtml
@@ -28,8 +28,9 @@
         
         $("#submit_changePassword").click(function(){
             
-            if($("#new").val().length < 6 || $("#new").val().length > 10){
-                $("#error_changePassword").html('La taille de votre mot de passe doit être comprise entre 6 et 10 caractères !');
+            var regExp = new RegExp(/(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$/);
+            if(!regExp.test($("#new").val())){
+                $("#error_changePassword").html('&nbsp;Votre nouveau mot de passe doit correspondre aux critères suivant : 8 charactères, 1 majuscule, 1 chiffre minimum');
                 $("#error_changePassword").show();
                 setTimeout(function() {
                     $("#error_changePassword").fadeOut("slow");
