--- a/application/views/scripts/inscription/index.phtml
+++ b/application/views/scripts/inscription/index.phtml
@@ -461,7 +461,20 @@ $user = new Zend_Session_Namespace('user');?>
 
         // Vérification de okForSubmit et envoie du form si ok
         $("#inscription_form").submit(function(event){
+
           $('#submit_inscription').focus();
+
+          if($('#paysNaissance').val() == 'France' && $('#departementNaissance').val() == ''){
+               console.log('if');
+               $('#departementNaissance-element, #departementNaissance-label').show();
+               $("#departementNaissance").focus();
+               $("#info_submit").html("Veuillez remplir votre département de naissance");
+               $("#info_submit").show();
+               setTimeout(function() {
+                  $( "#info_submit" ).fadeOut("slow");
+               }, 2000 );
+               return false;
+          }
           if(array_check.length > 0)
                array_check = [];
 
@@ -485,7 +498,6 @@ $user = new Zend_Session_Namespace('user');?>
               setTimeout(function() {
                   $( "#info_submit" ).fadeOut("slow");
               }, 2000 );
-
             }
             return false;
         });
@@ -655,12 +667,12 @@ $user = new Zend_Session_Namespace('user');?>
                 $("#info_codePostal").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; Veuillez saisir votre code postal ");
         });
         
-        $("#ville").blur(function(){
-            if($('#ville').val().length > 0){
-                $("#info_ville").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />"); 
-            }else
-                $("#info_ville").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; Veuillez saisir votre ville ");
-        });
+        // $("#ville").blur(function(){
+        //     if($('#ville').val().length > 0){
+        //         $("#info_ville").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />"); 
+        //     }else
+        //         $("#info_ville").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; Veuillez saisir votre ville ");
+        // });
             
         $("#departementNaissance").blur(function(){
             var regExp = new RegExp(/[0-9]{2}/);
