--- a/application/views/scripts/inscription/index.phtml
+++ b/application/views/scripts/inscription/index.phtml
@@ -7,7 +7,7 @@ $user = new Zend_Session_Namespace('user');?>
 		Le recrutement des formateurs est ouvert à toute personne majeure (qui a la possibilité de s’immatriculer, pour ensuite facturer les prestations effectuées à Easylia).
 	</p>
 	<p id="info_inscription"><i>Tous les champs marqués d'une * sont obligatoires.</i></p>
-	<form id="inscription_form" enctype="application/x-www-form-urlencoded" method="post" action="/inscription/">
+	<form id="inscription_form" enctype="application/x-www-form-urlencoded" method="post" action="/inscription-formateur">
 	<dl class="zend_form">
 		<div id="form-content">
 			<div id="inscription_civilite">
